# web_application_with_messaging

./: .env.sample  .gitignore  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_campaign_emailattempt.py  0003_alter_campaign_end_time.py
mailing/templates/mailing/: base.html  campaign_confirm_delete.html  campaign_detail.html  campaign_form.html  home.html  message_confirm_delete.html  message_detail.html  message_form.html  messages_list.html  subscriber_confirm_delete.html  subscriber_detail.html  subscriber_form.html  subscriber_home.html  subscriber_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: edit_profile.html  login.html  register.html  user_detail.html
