[tool.poetry]
name = "web-application-with-messaging"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
django = "^5.2.8"
whitenoise = "^6.11.0"
gunicorn = "^23.0.0"
flake8 = "^7.3.0"
black = "^25.11.0"
coverage = "^7.12.0"
mypy = "^1.19.0"
pytest = "^9.0.1"
pytest-django = "^4.11.1"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
